# jarvis-conversationalist

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python-release.yml  python-test-release-publish.yml  python-test-release.yml
src/jarvis_conversationalist/: __init__.py  __main__.py  assistant_history.py  audio_identifier.py  audio_listener.py  audio_player.py  audio_transcriber.py  audio_vectordb.py  cli.py  config.py  conversationalist.py  logger_config.py  openai_interface.py  openai_utility_functions.py  speaker_functions.py  speaker_recognition.py  streaming_response_audio.py  test.pickle  text_speech.py
src/jarvis_conversationalist/openai_functions/: basic_tools.py  functions.py  google_tools.py  internet_helper.py  weather_functions.py
tests/: __init__.py  test.py
