[project]
name = "jarvis_conversationalist"
version = "0.3.1"
authors = [{name="Elias Weston-Farber", email="eweston4@jhu.edu"}]
description = "A voice assistant for the command line"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["openai-whisper==20231106","openai==1.2.3",
    "chromadb<=0.4.15","soundfile==0.12.1","PyAudio==0.2.14","pydub==0.25.1",
    "gtts==2.4.0","spacy==3.7.2","beautifulsoup4==4.12.2","googlesearch-python==1.2.3",
    "tiktoken==0.5.1","geocoder==1.38.1","scrapy==2.11.0"]
[project.scripts]
jarvis = "jarvis_conversationalist.__main__:main"
[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
[tool.setuptools.package-data]
"jarvis_conversationalist.audio_files" = ["*.wav"]
[project.urls]
url = "https://github.com/elias-jhsph/jarvis-conversationalist"
[options]
python_requires = ">=3.11"
[build-system]
requires = ["setuptools>=61.0", "wheel"]

build-backend = "setuptools.build_meta"

